noinst_LTLIBRARIES = libbikedemo.la

INCLUDES = include

libbikedemo_la_SOURCES = allocs.c buffer.c css.c \
                         celem.c css.c dom.c eval.c \
                         evt.c gen.c grammar.c \
                         html.c http.c ic.c iri.c \
                         js.c lang.c lex.c log.c map.c \
                         md.c opt.c os.c parser.c \
                         shdw.c slctr.c svr.c tmplte.c \
                         util.c xbl.c xml.c xslt.c
